--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <button class="btn" onclick="recalc()">Calcular créditos</button>
           <button class="btn" onclick="saveState()">Guardar ahora</button>
           <button class="btn danger" onclick="resetMinutes()">Reiniciar minutos</button>
-          <button class="btn danger" onclick="clearNonConstant()">Borrar todo (no constante)</button>
+          <button class="btn danger" onclick="clearNonConstant()">Borrar todo</button>
         </div>
       </div>
       <div class="body">
