--- a/index.html
+++ b/index.html
@@ -526,7 +526,10 @@
       <li>M. Sc. Julio Rodolfo Lima Ochoa, Economía.</li>
       <li>M. Sc. Mauro Sierra Hengstemberg, Área Común.</li>
     </ul>
-    <p><strong>Diseño:</strong> M. Sc. Luz Maria Lima Soto. Dr. José Rodolfo Chávez Mejía.</p>
+    <p><strong>Estructura CLAR:</strong></p>
+    <ul>
+      <li>M. Sc. Luz Maria Lima Soto.</li>
+      <li>Dr. José Rodolfo Chávez Mejía.</p>
   </div>
 
   <!-- Gestión de cursos -->
