Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
   <!-- ENCABEZADO INFORMATIVO - Solo en formulario -->
   <div class="info-coordinadores">
-    <h3>GUÍA PARA PROGRAMAR CRÉDITOS CLAR EN LA DIVISIÓN DE CCEE DEL CUNOC-USAC</h3>
+    <h3>GUÍA PARA PROGRAMAR CRÉDITOS LATINOAMERICANOS DE REFERENCIA (CLAR) EN LA DIVISIÓN DE CCEE DEL CUNOC-USAC</h3>
     <p><strong>Director:</strong> Dr. Edgar Vidal Camposeco Pérez.</p>
     <p><strong>Coordinadores:</strong></p>
     <ul>
