Update contact information and header text

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 <div class="container">
   <!-- NOTA DE DERECHOS RESERVADOS - Solo en formulario -->
   <div class="derechos-reservados">
-    Derechos Reservados 2025 – Dr. José Rodolfo Chávez Mejía - División CCEE – CUNOC – USAC
+    Derechos Reservados 2025 – Dr. José Rodolfo Chávez Mejía - División CCEE – CUNOC – USAC Tel.: (+502)52133500
   </div>
 
   <div class="page-header">
@@ -517,7 +517,7 @@
 
   <!-- ENCABEZADO INFORMATIVO - Solo en formulario -->
   <div class="info-coordinadores">
-    <h3>GUÍA PARA PROGRAMAR CRÉDITOS LATINOAMERICANOS DE REFERENCIA (CLAR) EN LA DIVISIÓN DE CCEE DEL CUNOC-USAC</h3>
+    <h3>GUÍA PARA PROGRAMAR CRÉDITOS LATINOAMERICANOS DE REFERENCIA (CLAR) EN LA DIVISIÓN DE CIENCIAS ECONOMICAS DEL CUNOC-USAC</h3>
     <p><strong>Director:</strong> Dr. Edgar Vidal Camposeco Pérez.</p>
     <p><strong>Coordinadores:</strong></p>
     <ul>
