Change 'Estructura CLAR' to 'Diseño Curricular'

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
       <li>M. Sc. Julio Rodolfo Lima Ochoa, Economía.</li>
       <li>M. Sc. Mauro Sierra Hengstemberg, Área Común.</li>
     </ul>
-    <p><strong>Estructura CLAR:</strong></p>
+    <p><strong>Diseño Curricular:</strong></p>
     <ul>
       <li>M. Sc. Luz Maria Lima Soto.</li>
       <li>Dr. José Rodolfo Chávez Mejía.</p>
