Update director and coordinators in index.html

--- a/index.html
+++ b/index.html
@@ -549,13 +549,13 @@
   <!-- ENCABEZADO INFORMATIVO - Solo en formulario -->
   <div class="info-coordinadores">
     <h3>GUÍA PARA PROGRAMAR CRÉDITOS LATINOAMERICANOS DE REFERENCIA (CLAR) EN LA DIVISIÓN DE CIENCIAS ECONOMICAS DEL CUNOC-USAC</h3>
-    <p><strong>Director:</strong> Dr. Edgar Vidal Camposeco Pérez.</p>
+    <p><strong>Director:</strong> Dr. Walter Valdemar Poroj Sacor.</p>
     <p><strong>Coordinadores:</strong></p>
     <ul>
-      <li>M. Sc. Julio César López De León, Contaduría Pública y Auditoría.</li>
+      <li>M. Sc. Mauro Sierra Hengstemberg, Contaduría Pública y Auditoría.</li>
       <li>Dr. Walter Alfredo Santizo López, Administración de Empresas.</li>
-      <li>M. Sc. Julio Rodolfo Lima Ochoa, Economía.</li>
-      <li>M. Sc. Mauro Sierra Hengstemberg, Área Común.</li>
+      <li>M. Sc. Fernando Rodríguez Ángel, Economía.</li>
+      <li>M. Sc. Luis Fernando Aguilar Alvarado, Área Común.</li>
     </ul>
     <p><strong>Diseño Curricular:</strong></p>
     <ul>
@@ -1539,16 +1539,16 @@ function asignarCoordinador(carrera) {
   
   switch (carrera) {
     case 'Contaduría Pública y Auditoría':
-      nombre = 'M. Sc. Julio César López De León';
+      nombre = 'M. Sc. Mauro Sierra Hengstemberg';
       break;
     case 'Administración de Empresas':
       nombre = 'Dr. Walter Alfredo Santizo López';
       break;
     case 'Economía':
-      nombre = 'M. Sc. Julio Rodolfo Lima Ochoa';
+      nombre = 'M. Sc. Fernando Rodríguez Ángel';
       break;
     case 'Área Común':
-      nombre = 'M. Sc. Mauro Sierra Hengstemberg';
+      nombre = 'M. Sc. Luis Fernando Aguilar Alvarado';
       break;
     default:
       nombre = 'Coordinador Asignado';
