--- a/index.html
+++ b/index.html
@@ -539,7 +539,8 @@
 <div class="container">
   <!-- NOTA DE DERECHOS RESERVADOS - Solo en formulario -->
   <div class="derechos-reservados">
-    Derechos Reservados 2025 License: Creative Commons Atribución–NoComercial–SinDerivadas 4.0 Internacional – Dr. José Rodolfo Chávez Mejía - División CCEE – CUNOC Tel.: (+502)52133500
+   Licencia: Creative Commons Atribución–NoComercial–SinDerivadas 4.0 Internacional (CC BY-NC-ND 4.0)|Autor: Dr. José Rodolfo Chávez Mejía|Uso institucional autorizado: División de Ciencias Económicas (CCEE), CUNOC-USAC|Contacto: licjosechavez@yahoo.es
+|Tel: (+502) 5213-3500
   </div>
 
   <div class="page-header">
