Update license information in index.html
Added version information to the license section.

--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@
 <div class="container">
   <!-- NOTA DE DERECHOS RESERVADOS - Solo en formulario -->
   <div class="derechos-reservados">
-   Licencia: Creative Commons Atribución–NoComercial–SinDerivadas 4.0 Internacional (CC BY-NC-ND 4.0)|Autor: Dr. José Rodolfo Chávez Mejía|Uso institucional autorizado: División de Ciencias Económicas (CCEE), CUNOC-USAC|Contacto: licjosechavez@yahoo.es
-|Tel: (+502) 5213-3500
+   Licencia: Creative Commons Atribución–NoComercial–SinDerivadas 4.0 Internacional (CC BY-NC-ND 4.0) | Autor: Dr. José Rodolfo Chávez Mejía | Uso institucional autorizado: División de Ciencias Económicas (CCEE), CUNOC-USAC | Contacto: licjosechavez@yahoo.es
+ | Tel: (+502) 5213-3500 | Versión 2026.1
   </div>
 
   <div class="page-header">
